style.css
header {
    display: flex;
    padding: 30px;
    background-color: rgb(255, 249, 242);
    color: rgb(88, 64, 31)
}

body {
    display: flex;
}

main {
    background-color: rgb(248, 227, 200);
}

#for-text-colors {
    color: rgb(88, 64, 31)
    overflow-x: scroll;
}

#name-list {
    flex-wrap: wrap;
    grid-template-columns: 30vw 35vw 30vw;
    grid-template-rows: 30vh 35vh 30vh;
    align-content: center;
    column-count: 3;
    column-gap: 40px;
    overflow-wrap: break-word;
}

h3 {
    break-after: column;
}

#random-drink {
    display: flex;
    overflow-x: auto;
    margin: 1rem 0;
    max-width: calc(50vw - 2rem);
    max-height: 50vh;
    font-size: 24px;
}

.card {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    transition: 0.3s;
    border-radius: 5px;
    /* 5px rounded corners */
}

/* Add rounded corners to the top left and the top right corner of the image */
img {
    border-radius: 5px 5px 0 0;
    display: block;
} 

#random-drink-image {
    justify-content: center;
    margin: auto;
}

